Field class added

--- a/Tic-Tac-Toe-Game/Tic-Tac-Toe-Game.vcxproj.filters
+++ b/Tic-Tac-Toe-Game/Tic-Tac-Toe-Game.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Tic-Tac-Toe-Game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Field.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Field.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
