--- a/Tic-Tac-Toe-Game/Tic-Tac-Toe-Game.vcxproj
+++ b/Tic-Tac-Toe-Game/Tic-Tac-Toe-Game.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Field.cpp" />
     <ClCompile Include="Tic-Tac-Toe-Game.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Field.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
